--- a/AB_fit.ipynb
+++ b/AB_fit.ipynb
@@ -364,8 +364,8 @@
     "\n",
     "    # Plot formating\n",
     "    ax.set_xlabel(r'Spatial scale $\\log_{10}$ ([Mpc/h])')\n",
-    "    ax.set_ylabel(r'$\\xi$ / $\\xi_{\\rm{shuff (M_H)}}$')\n",
-    "    ax.set_title(f'2PCF ratio ({N_shufflings} shufflings, stellar mass bin: {mass_cut_1}-{mass_cut_2})')\n",
+    "    ax.set_ylabel(r'$\\xi$ / $\\xi_{\\rm M_{H}}$')\n",
+    "    # ax.set_title(f'2PCF ratio ({N_shufflings} shufflings, stellar mass bin: {mass_cut_1}-{mass_cut_2})')\n",
     "\n",
     "    ax.set_ylim([0.9, 1.3])\n",
     "    ax.set_xlim([-0.5, np.log10((max(pcf_original['ravg'])))])\n",
@@ -410,8 +410,8 @@
    ],
    "source": [
     "# Best results plot\n",
-    "plot_AB(1, ['Halo mrank 4', 'Halo vrank 5', 'Halo tmform 1', 'Halo tvform 1'], scale=1, save='best_fit_')\n",
-    "plot_AB(2, ['Halo mrank 6', 'Halo vrank 6', 'Halo tmform 1', 'Halo tvform 3'], scale=1, save='best_fit_')\n",
+    "plot_AB(1, ['Halo mrank 4', 'Halo vrank 5', 'Halo tmform 1', 'Halo tvform 1'], scale=0.65, save='best_fit_')\n",
+    "plot_AB(2, ['Halo mrank 6', 'Halo vrank 6', 'Halo tmform 1', 'Halo tvform 3'], scale=0.65, save='best_fit_')\n",
     "plt.show()"
    ]
   },
@@ -583,29 +583,29 @@
    ],
    "source": [
     "# Rest of the plots\n",
-    "plot_AB(1, ['Halo concentration', 'Halo spin'], save='Mass_concentration_spin_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo concentration', 'Halo spin'], save='Mass_concentration_spin_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo concentration', 'Halo spin'], save='Mass_concentration_spin_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo concentration', 'Halo spin'], save='Mass_concentration_spin_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo mrank 1', 'Halo mrank 2', 'Halo mrank 3'], save='mrank_123_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo mrank 1', 'Halo mrank 2', 'Halo mrank 3'], save='mrank_123_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo mrank 1', 'Halo mrank 2', 'Halo mrank 3'], save='mrank_123_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo mrank 1', 'Halo mrank 2', 'Halo mrank 3'], save='mrank_123_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo mrank 4', 'Halo mrank 5', 'Halo mrank 6'], save='mrank_456_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo mrank 4', 'Halo mrank 5', 'Halo mrank 6'], save='mrank_456_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo mrank 4', 'Halo mrank 5', 'Halo mrank 6'], save='mrank_456_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo mrank 4', 'Halo mrank 5', 'Halo mrank 6'], save='mrank_456_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo vrank 1', 'Halo vrank 2', 'Halo vrank 3'], save='vrank_123_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo vrank 1', 'Halo vrank 2', 'Halo vrank 3'], save='vrank_123_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo vrank 1', 'Halo vrank 2', 'Halo vrank 3'], save='vrank_123_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo vrank 1', 'Halo vrank 2', 'Halo vrank 3'], save='vrank_123_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo vrank 4', 'Halo vrank 5', 'Halo vrank 6'], save='vrank_456_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo vrank 4', 'Halo vrank 5', 'Halo vrank 6'], save='vrank_456_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo vrank 4', 'Halo vrank 5', 'Halo vrank 6'], save='vrank_456_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo vrank 4', 'Halo vrank 5', 'Halo vrank 6'], save='vrank_456_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo tmform 1', 'Halo tmform 2', 'Halo tmform 3'], save='tmform_123_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo tmform 1', 'Halo tmform 2', 'Halo tmform 3'], save='tmform_123_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo tmform 1', 'Halo tmform 2', 'Halo tmform 3'], save='tmform_123_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo tmform 1', 'Halo tmform 2', 'Halo tmform 3'], save='tmform_123_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo tmform 1', 'Halo tmform 4', 'Halo tmform 5'], save='tmform_145_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo tmform 1', 'Halo tmform 4', 'Halo tmform 5'], save='tmform_145_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo tmform 1', 'Halo tmform 4', 'Halo tmform 5'], save='tmform_145_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo tmform 1', 'Halo tmform 4', 'Halo tmform 5'], save='tmform_145_Fit_', scale=0.7)\n",
     "\n",
-    "plot_AB(1, ['Halo tvform 1', 'Halo tvform 2', 'Halo tvform 3'], save='tvform_123_Fit_', scale=1)\n",
-    "plot_AB(2, ['Halo tvform 1', 'Halo tvform 2', 'Halo tvform 3'], save='tvform_123_Fit_', scale=1)\n",
+    "plot_AB(1, ['Halo tvform 1', 'Halo tvform 2', 'Halo tvform 3'], save='tvform_123_Fit_', scale=0.7)\n",
+    "plot_AB(2, ['Halo tvform 1', 'Halo tvform 2', 'Halo tvform 3'], save='tvform_123_Fit_', scale=0.7)\n",
     "plt.show()"
    ]
   },
